--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,21 +3,34 @@
 nav {
     display: flex;
     flex-direction: column;
-    align-items: center;;
-    background: @nav-bg;
-    padding: 30px 0; 
+    align-items: center;
+    background:@nav-bg;
+    padding: 30px 0;
 
     h1 {
         size: 3.8rem; 
-        color:@header-font-color;
+        color:@nav-font;
+        margin-bottom: 20px;
+        
+        @media @phone {
+            margin-bottom: 20px;
+        }
+
     }
 
+    @media @phone {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        // margin-bottom: 5%;  
+    } 
+
     a {
-        display: inline;
-        justify-content: space-around;
         text-decoration:none;
         color:@nav-font;
         font-size: 1.5rem;
+        padding: 15px 15px;
+        margin-top:10px;
         
         
      } // close anchor 
